# ChangeLog for net-im/kadu-cenzor
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  18 Dec 2008; Michał Ziąbkowski <mziab@o2.pl> +kadu-cenzor-0.2.1.ebuild:
  Bumped.

  08 Dec 2008; Michał Ziąbkowski <mziab@o2.pl>
  -kadu-cenzor-0.6.5_rc2.ebuild, +kadu-cenzor-0.6.5.ebuild:
  Bumped. Removed previous version.

  12 Nov 2008; Michał Ziąbkowski <mziab@o2.pl>
  +kadu-cenzor-0.6.5_rc2.ebuild:
  Bumped.

  06 Jun 2008; Michał Ziąbkowski <mziab@o2.pl> kadu-cenzor-0.2.ebuild:
  Made ebuild more beautiful.
