@@ -1,7 +1,8 @@
-DIST kadu-0.6.5.tar.bz2 1312474 RMD160 26a80cb7b0c7dbc8c2c38ae9b8aa6609eb0fd8ad SHA1 9cacbec423c192f6482d9d67a163350191f5bfe2 SHA256 09f17f4b23a3ea8590135ff4a050b52565f3a364bfe4d986079c5be0bba83fdb
+DIST kadu-0.6.5.1.tar.bz2 1341099 RMD160 3c1a8a770d0701e019b5ed68658d20ea6f789e45 SHA1 1257b37c30d9682d4fd350b78d983de04b970872 SHA256 e2df2e1d7c1fa9a5d931a35efeb936088c42ef4b5d42fef8dddadc40f87397e2
 DIST kadu-cenzor-0.2.1.tar.bz2 4130 RMD160 8db3133f3e2c90523964c3daa6f9ee802d47aa33 SHA1 6abc8fe4d9539e28d08f5431f3c854490f672b4c SHA256 84d60f0f65efee92b253e576260dd5b0202bfc868633ae56cc6366ea46636fb0
 DIST kadu-cenzor-0.2.tar.bz2 4056 RMD160 e0eeb849f37a746e05ec138c7681429af10dd003 SHA1 0a01c2fbfa9a308b8a604d428f40332f6a690ed9 SHA256 3a138b3b352fc62fe548a57455faa1c58c58b0d82cd28f277b3d79ffff8bbc24
-EBUILD kadu-cenzor-0.2.1.ebuild 203 RMD160 88c9ce3dac07deba700765625f609ef5e92648cb SHA1 e6b548b69b2d67250911cc517350fd14a354652a SHA256 8247c36a73f8e328aecd52c682d3fa1f2554a720ab79fdd2dd7ac2c44ad97f2a
-EBUILD kadu-cenzor-0.2.ebuild 203 RMD160 88c9ce3dac07deba700765625f609ef5e92648cb SHA1 e6b548b69b2d67250911cc517350fd14a354652a SHA256 8247c36a73f8e328aecd52c682d3fa1f2554a720ab79fdd2dd7ac2c44ad97f2a
-EBUILD kadu-cenzor-0.6.5.ebuild 201 RMD160 54119e731e6bd698558951ad7413a1a14602cae4 SHA1 748cc405009f1f82b1513775fb5552d7440a2a02 SHA256 c2c4402643fd1bd86197b6f8d85d14794a4e2bb54c2fd844287906af04fbbcfc
-MISC ChangeLog 549 RMD160 b4dc70e7c67ef9f2b9c793ce1274d4bbdefde124 SHA1 11b870179a76f77bd130be51b681f8ef0fc1f9f8 SHA256 595a62dec5366f5882185ace8454b6a803ec07c1420b61db33e118bb617ac859
+EBUILD kadu-cenzor-0.2.1.ebuild 332 RMD160 851fe005f17604db29d7ba7f3b2236a8b9d2179e SHA1 9f313a25d03e8b1c2717b3a5a12e57fadf2d1e54 SHA256 1a3af89cb2ba17f6ed54bef4433013ba7e98ebc91a92d56f585a0c800ab8840e
+EBUILD kadu-cenzor-0.2.ebuild 332 RMD160 851fe005f17604db29d7ba7f3b2236a8b9d2179e SHA1 9f313a25d03e8b1c2717b3a5a12e57fadf2d1e54 SHA256 1a3af89cb2ba17f6ed54bef4433013ba7e98ebc91a92d56f585a0c800ab8840e
+EBUILD kadu-cenzor-0.6.5.1.ebuild 296 RMD160 021c672954027203b5864029d8a0a441bf11dd00 SHA1 7064a4708695ab907a3fc3d3e9fcd8069859b3f0 SHA256 9ae485d614749e167633c319ba5b54bf2b91855798c6929abffc2700c5c3b99b
+MISC ChangeLog 780 RMD160 a681ba87ea4df8a6fef0990b44bdb0561f75f812 SHA1 9edc61519134af57c7e74593e9b9671385d857d9 SHA256 04ea1dbb8ef8ea3fb6357e1d36d2842b3b82a53395fc885c9aa0a6f49ba0e8c7
+MISC metadata.xml 244 RMD160 fcdb1f5f93ea0a45207aa3ba4ec6cacbe527c0db SHA1 37fa1906c0e0ec9e8ee54787a8b97c1b23270f04 SHA256 e9d24a79e73b4d1d8577b7e887e96a818c4b807ed590c9b83de26cd30e0f0d3a
