@@ -1,3 +1,7 @@
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: $
+
 SRC_URI="http://www.kadu.net/~dorr/moduly/${P}.tar.bz2"
 
 MOD_TYPE="ext"
@@ -7,3 +11,4 @@ inherit kadu-module
 DESCRIPTION="Kadu module that warns contacts about swearing"
 HOMEPAGE="http://kadu.net"
 KEYWORDS="amd64 x86"
+IUSE=""
